--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "js-cookie": "^3.0.5",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
+    "@types/js-cookie": "^3.0.3",
     "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-testing-library": "^5.11.0",
     "jest": "^29.6.2",
